--- a/Latex/_maintext.tex
+++ b/Latex/_maintext.tex
@@ -333,9 +333,7 @@
 % ------------------------------------------------------------------------ 
 %        -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE %
 %        =================================================================
-% =================================================================
-% -- TABLE -- TABLE -- TABLE -- TABLE -- TABLE -- TABLE -- TABLE  % 
-% -----------------------------------------------------------------
+
 \par
     \begin{center}    \textbf{US House Election Summaries (PA 2004-2016)} \par \end{center}
     \begin{center}   \textbf{[ INSERT TABLE \ref{tab:congsum} ABOUT HERE ]} \end{center}
@@ -359,16 +357,25 @@
 %        ================================================================= 
     Additionally, each district's outcome is identical to the 2016 congressional district results. 
 \par
-    But we do wish to do a further robustness check on the plausibility of using our five election composite to calculate the various metrics designed to measure potential gerrymandering. One way to do this is to see how well that composite (calculated at a hypothetical 50\% vote share) mimics the results of the values for the four metrics for the 2011 map that we previously obtained using the actual congressional election results for that map. What we are doing is comparing a hypothetical ``normal vote” \citep{Converse1966} assumption (based on a statewide vote in which we are not taking incumbency effects into account) with the average of what we actually get in three different congressional elections. The results in Table \ref{tab:congsum} are 0.11 for bias, 0.16 for the efficiency gap, 0.06 for the value of the mean minus median gap, and 0.40 for declination. The comparable results from Table \ref{tab:gerry} are 0.09, 0.25, 0.05, and 0.40. It is apparent how close these two sets of values are to one other even though one is based on actual elections with a mean Democratic (two-party) vote share close to 47\% while the other is based on projected election results set to yield a 50-50 two-part vote distribution. If instead we calculate these four metrics using the average five election statewide vote in these elections over the period 2012-2016, a Democratic vote share of 49.1\% we get virtually identical values: 0.09, 0.24,  0.05, 0.36.
+    But we do wish to do a further robustness check on the plausibility of using our five election composite to calculate the various metrics designed to measure potential gerrymandering. One way to do this is to see how well the composite (calculated at a hypothetical 50\% vote share) mimics the results of the values for the four metrics for the 2011 map that we previously obtained using the actual congressional election results for that map. What we are doing is comparing a hypothetical ``normal vote” \citep{Converse1966} assumption (based on a statewide vote in which we are not taking incumbency effects into account) with the average of what we actually get in three different congressional elections. The results in Table \ref{tab:congsum} are 0.11 for bias, 0.16 for the efficiency gap, 0.06 for the value of the mean minus median gap, and 0.40 for declination. The comparable results from Table \ref{tab:gerry} are 0.09, 0.25, 0.05, and 0.40. It is apparent how close these two sets of values are to one other even though one is based on actual elections with a mean Republican (two-party) vote share close to 53\% while the other is based on projected election results set to yield a 50-50 two-part vote distribution. If instead we calculate these four metrics using the average five election statewide vote in these elections over the period 2012-2016, a Democratic vote share of 49.1\% we get virtually identical values: 0.09, 0.24,  0.05, 0.36.
 %        ================================================================= 
 %        -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE --  %
 % ------------------------------------------------------------------------
-		\footnote{If we center the simulations at the 2012-2016 average statewide Republican vote of 53.3\% of the vote, we again get remarkably consistent estimates [0.09, 0.19, 0.05, 0.45].}
+		\footnote{If we center the simulations at the 2012-2016 average statewide Republican vote of 53.3\% of the vote, we again get remarkably consistent estimates [0.09, 0.19, 0.05, 0.46 ].}
 % ------------------------------------------------------------------------ 
 %        -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE %
 %        =================================================================    
 \par
-    Our confidence in our five election projection method is further buttressed because, when we applied this method to predict the results of the 2018 election under the court-ordered remedial map, although the method had been developed prior to the 2018 election, using data no more recent than 2016, it correctly predicted that the court-ordered remedial plan would have (in this good Democratic year) an outcome of roughly 9R-9D.
+    Our confidence in our five election projection method is further buttressed because, when we applied this method to predict the results of the 2018 election under the court-ordered remedial map. Although the method had been developed prior to the 2018 election, using data no more recent than 2016, and not including any incumbency advantage, it predicted that the court-ordered remedial plan would have produced an outcome of between 5R-12D and 11R-7D.
+%        ================================================================= 
+%        -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE --  %
+% ------------------------------------------------------------------------
+        \footnote{After uniformly shifting each district's composite such that the statewide average equalled the actual 2018 statewide average. The large range is indicative of the number of competitive districts that Republican candidates won. Had we modeled incumbency advantage instead of the `normal vote', the two Republican incumbents who won by less than 2 percentage points, along with the one who won by less than 3 percentage points would have made the actual 9R-9D outcome the likely composite outcome.}
+% ------------------------------------------------------------------------ 
+%        -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE %
+%        =================================================================
+
+
 % =================================================================
 % -- TABLE -- TABLE -- TABLE -- TABLE -- TABLE -- TABLE -- TABLE  % 
 % -----------------------------------------------------------------
