--- a/Latex/_maintext.tex
+++ b/Latex/_maintext.tex
@@ -366,7 +366,7 @@
 %        -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE %
 %        =================================================================    
 \par
-    Our confidence in our five election projection method is further buttressed because, when we applied this method to predict the results of the 2018 election under the court-ordered remedial map. Although the method had been developed prior to the 2018 election, using data no more recent than 2016, and not including any incumbency advantage, it predicted that the court-ordered remedial plan would have produced an outcome of between 5R-12D and 11R-7D.
+    Our confidence in the five election projection method is further buttressed because, when we applied this method to predict the results of the 2018 election under the court-ordered remedial map. Although the method had been developed prior to the 2018 election, using data no more recent than 2016, and not including any incumbency advantage, it predicted that the court-ordered remedial plan would have produced an outcome of between 5R-12D and 11R-7D.
 %        ================================================================= 
 %        -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE --  %
 % ------------------------------------------------------------------------
