--- a/Latex/_maintext.tex
+++ b/Latex/_maintext.tex
@@ -379,7 +379,7 @@
 % =================================================================
 % -- TABLE -- TABLE -- TABLE -- TABLE -- TABLE -- TABLE -- TABLE  % 
 % -----------------------------------------------------------------
-% Measures of Gerrymandering for the Four Considered Plans
+\begin{center} Measures of Gerrymandering for the Four Considered Plans \end{center}
 % ••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••• 
 %    
 \begin{center} INSERT TABLE \ref{tab:gerry} ABOUT HERE \end{center}
@@ -387,7 +387,7 @@
 % =================================================================
 % -- TABLE -- TABLE -- TABLE -- TABLE -- TABLE -- TABLE -- TABLE  % 
 % -----------------------------------------------------------------
-% Probabilistic Projections of Partisan Outcomes for Four Plans
+\begin{center} Probabilistic Projections of Partisan Outcomes for Four Plans \end{center}
 % ••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••• 
 %
 \begin{center} INSERT TABLE \ref{tab:prob} ABOUT HERE \end{center}
