Latex files update

--- a/Latex/main.tex
+++ b/Latex/main.tex
@@ -61,7 +61,7 @@
     \end{landscape}
 \clearpage
     \begin{landscape}
-        \input{Tables/_tab_prop.tex}
+        \input{Tables/_tab_prob.tex}
     \end{landscape}
 % \clearpage
 %     \begin{landscape}
