--- a/Latex/_maintext.tex
+++ b/Latex/_maintext.tex
@@ -4,7 +4,7 @@
 % ▀▀█ █▀▀ █░░ ░░█░░ ▀█▀ █░░█ █░░█
 % ▀▀▀ ▀▀▀ ▀▀▀ ░░▀░░ ▀▀▀ ▀▀▀▀ ▀░░▀
 % •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
-\section{Introduction}
+    \section{Introduction}
 % •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
     \lettrine[lines=3, lraise=0.1, nindent=0em]{\color{lightgray}I}{n} \textit{League of Women Voters v. Pennsylvania}, decided January 22, 2018 (henceforth abbreviated \textit{LWV}), the Pennsylvania Supreme Court offered a new and distinctive test for unconstitutional partisan gerrymandering under which it found the state’s congressional districts to be a ``severe and durable" partisan gerrymander that violated a long-standing provision of the state’s constitution. The congressional map that was struck down was drawn in 2011 by a Republican-controlled legislature and signed into law by the then Republican governor. It was used in elections from 2012 to 2016. Prior to the \textit{LWV} decision, many academics had identified this map as a partisan gerrymander \citep[see e.g.,][]{Royden2017}, with some even identifying it as the most egregious congressional districting in the U.S. \citep[][ esp. Figure 3]{Wang2016_SLR}.
 % ================================================================= 
@@ -128,7 +128,7 @@
 % ▀▀█ █▀▀ █░░ ░░█░░ ▀█▀ █░░█ █░░█
 % ▀▀▀ ▀▀▀ ▀▀▀ ░░▀░░ ▀▀▀ ▀▀▀▀ ▀░░▀
 % •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
-\section{Evaluating the Various Plans -- Methods and Theory}
+    \section{Evaluating the Various Plans -- Methods and Theory}
 % •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
     As noted above, to contrast the Court-ordered Remedial plan with the 2011 Enacted plan, and to make further comparisons to the two most politically important remedy plans offered to the Court, the joint plan proposed by the Republicans leaders of the two legislative chambers, and the Governor’s proposed plan as a Democratic alternative, we will look at a number of features of each of these four plans as a whole.  We do not, however, discuss district-specific criteria for identifying gerrymandering in these maps, since, although some district-specific evidence was presented about the 2011 map in the trial testimony by an expert who was highly knowledgeable about communities of interest in the state, the Pennsylvania Supreme Court opinion itself offers a \underline{statewide} standard for a finding of unconstitutional partisan gerrymandering. 
    % ================================================================= 
@@ -146,12 +146,13 @@
     \item compactness measures, since compactness is also a criterion specifically referenced by the Pennsylvania Supreme Court
 \end{itemize}
 \par
-% •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
-% -- SUBSECTION -- SUBSECTION -- SUBSECTION -- SUBSECTION -- SUBS %
-% •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
-\subsection*{Measurement and Data}
-\subsubsection*{County Splits}
-% •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
+% •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
+% ▀▄▀▄▀▄ 𝚂𝚄𝙱𝚂𝙴𝙲𝚃𝙸𝙾𝙽 ▄▀▄▀▄▀▀▄▀▄▀▄ 𝚂𝚄𝙱𝚂𝙴𝙲𝚃𝙸𝙾𝙽 ▄▀▄▀▄▀▀▄▀▄▀▄ 𝚂𝚄𝙱𝚂𝙴𝙲𝚃𝙸𝙾𝙽 ▄▀▄▀▄▀
+% •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
+        \subsection*{Measurement and Data}
+% ↤↤↤↤↤ -------------- S̟U̟B̟-S̟U̟B̟S̟E̟C̟T̟I̟O̟N̟ -------------- ↦↦↦↦↦
+            \subsubsection*{County Splits}
+%
     Avoiding county splits is incorporated into the language of many state constitutions \citep{Grofman1985} and can be seen as a way of guarding against gerrymandering by making it more difficult to draw partisan maps. There are a total of 67 counties in PA, and the state is allocated 18 congressional districts.  Some county splits are necessitated by the size of the county population relative to the ideal population of a congressional district (705,687).  Allegheny and Montgomery must each be split at least twice, while Philadelphia must be split at least three times. If no set of counties exactly equals the ideal congressional population, every districting plan requires a minimum of $n-1$ splits (where $n$ equals the number of congressional districts). The Pennsylvania Supreme Court found that an unusually and egregiously large number of counties were split in the 2011 congressional map, and they found this fact deeply troubling.
 \par
 % =================================================================
@@ -181,8 +182,8 @@
 % -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE %
 % =================================================================
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
-\subsubsection*{Compactness}
+% ↤↤↤↤↤ -------------- S̟U̟B̟-S̟U̟B̟S̟E̟C̟T̟I̟O̟N̟ -------------- ↦↦↦↦↦
+            \subsubsection*{Compactness}
 % •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
     The measurement of compactness has long been a central issue in the districting literature \citep[see e.g.,][]{Reock1961, Niemi1990, Polsby1991, Webster2013, Kaufman2018}. Indeed, the original gerrymander was assumed to be evidence of political manipulation because of its irregular shape \citep{Martis2008}. Some minimal level of compactness can make it harder to gerrymander \citep[][cf. \citealt{Webster2013}]{Reock1961, Altman1998}. But compactness is not a magic wand that rules out the possibility of political manipulation. Moreover, as many authors have shown, compactness has multiple dimensions, and these different dimensions need not move in parallel with one another; thus a plan appears compact on one dimension might appear ill-compact on another. The two most common ideas of compactness refer, on the one hand, to how close a legislative district’s boundaries are to its geographic center and, on the other, to how ``regular" in shape a district appears to be \citep{Niemi1990, Kaufman2018}. In Table \ref{tab:summaries} we report two well-known measures which tap respectively each of these two dimensions.  The \textit{Polsby-Popper} measure looks at perimeter irregularity by examining the area of the district compared to that of a circle with similar perimeter, while the \textit{Reock} measure compares the area of a district with that of the district’s circumscribing circle \citep{Reock1961, Polsby1991}. 
 % ================================================================= 
@@ -220,8 +221,8 @@
 \par
     Now we turn to a consideration of probable partisan consequences of the four maps. We begin with a discussion of the 2011 map.
 \par
-% •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
-\subsubsection*{Partisan results in actual elections held under the 2011 map}
+% ↤↤↤↤↤ -------------- S̟U̟B̟-S̟U̟B̟S̟E̟C̟T̟I̟O̟N̟ -------------- ↦↦↦↦↦
+            \subsubsection*{Partisan results in actual elections held under the 2011 map}
 % •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
 %
     The best evidence about a plan’s partisan consequences is, of course, evidence derived from actual elections under the plan -- if there are any -- though we do need to check if there are highly anomalous aspects to one or more of these elections which would make results from them hard to generalize. Also, the existence of incumbency advantage can have a distorting effect on the translation of votes into seats, since incumbents may deter strong challengers, thus reducing the vote-share of the minority party \citep{Jacobson_Kernell_1981, Abramowitz1991}. Nonetheless, simply from examining outcomes in the three elections held under the plan (2012, 2014, 2016), the claim that the 2011 Pennsylvania congressional plan is an egregious partisan gerrymander is very hard to refute since (a) regardless of voter preferences the plan returned 13 Republicans and 5 Democrats, with no district changing hands over the course of the three elections, and (b) in those three elections, Democrats won only 28\% of the seats (5 out of 18), despite winning a substantial share of the vote in all three elections. In 2012, the Democratic share of the average two-party vote in the congressional elections in Pennsylvania was 48.0\%, in 2014 it was 44.5\%, and in 2016 it was 45.8\%. 
@@ -234,10 +235,10 @@
 % =================================================================    
     Thus, the discrepancy between Republican vote share and Republican seat share was huge, and yet the seat share appeared to be immutable.
 \par
-% •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
-%        
-\subsection*{Asymmetry measures for partisan outcomes in the 2011 Plan based on statewide election outcomes}
-%
+% •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
+% ▀▄▀▄▀▄ 𝚂𝚄𝙱𝚂𝙴𝙲𝚃𝙸𝙾𝙽 ▄▀▄▀▄▀▀▄▀▄▀▄ 𝚂𝚄𝙱𝚂𝙴𝙲𝚃𝙸𝙾𝙽 ▄▀▄▀▄▀▀▄▀▄▀▄ 𝚂𝚄𝙱𝚂𝙴𝙲𝚃𝙸𝙾𝙽 ▄▀▄▀▄▀
+% •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
+        \subsection*{Asymmetry measures for partisan outcomes in the 2011 Plan based on statewide election outcomes}
 % •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
 %
     There are other indicators of statewide partisan gerrymandering effects that also provide a compelling picture of the 2011 map as an (enduring) partisan gerrymander. There are several metrics that have been proposed to look at the degree to which there is asymmetry in seats-votes relationships that might be indicative of partisan gerrymandering: (1) \textit{partisan bias} \citep{Tufte1973}, (2) the \textit{mean-minus-median} gap \citep{Mcdonald_Best_2015_ELJ} (3) the \textit{efficiency gap} \citep{Stephanopoulos2014_UofChicagoLaw}, and most recently (4) declination \citep{Warrington2018}. Each of these measures can be directly calculated for the 2011 map based on district election outcomes. 
@@ -249,8 +250,8 @@
 % -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE %
 % =================================================================
 \par
-% •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
-\subsubsection*{Partisan Bias}
+% ↤↤↤↤↤ -------------- S̟U̟B̟-S̟U̟B̟S̟E̟C̟T̟I̟O̟N̟ -------------- ↦↦↦↦↦
+            \subsubsection*{Partisan Bias}
 % •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
 %
     \textit{Partisan Bias} indicates asymmetry in the translation of each party’s votes into seats. Customarily, partisan bias is measured at the (hypothetical) point where each party’s share of the two-party vote is exactly 50\%. At that point, both parties should, by symmetry, receive identical seats shares. Thus, the difference between a party’s projected seat-share with 50\% of the vote and exactly 50\% can be taken as a measure of partisan bias. Note, however, that although a plan must be proportional at the ($50,50$) point, a partisan bias of zero does not imply proportional representational. What partisan bias taps is differential treatment of the parties? Thus, for example, if party R gets 56\% of the seats with 52\% of the vote, this is not a sign of bias as long as party L also can be expected to get 56\% of the seats were it to have 52\% of the vote.
@@ -274,23 +275,23 @@
 % =================================================================
     \textit{Partisan Bias} is then calculated from the intercept of this regression using an exponential transformation (for details see \citet{Grofman1983}). Partisan bias is calculated from the Republican perspective, and \underline{negative} values indicates bias against Republicans.
 \par
-% •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
-        \subsubsection*{Mean-Median Gap}
+% ↤↤↤↤↤ -------------- S̟U̟B̟-S̟U̟B̟S̟E̟C̟T̟I̟O̟N̟ -------------- ↦↦↦↦↦
+            \subsubsection*{Mean-Median Gap}
 % •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
     When districts are sorted according to two-party vote share, the \textit{Mean-Median Gap} is the difference between the average vote percentage for a party and its vote share in the median district \citep[see][]{Best2018}. This measure is a variant of \textit{skewness}. When the mean is substantially higher or lower than the median, this is taken to be indicative of partisan bias.
 \par
-% •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
-        \subsubsection*{Efficiency Gap}
+% ↤↤↤↤↤ -------------- S̟U̟B̟-S̟U̟B̟S̟E̟C̟T̟I̟O̟N̟ -------------- ↦↦↦↦↦
+            \subsubsection*{Efficiency Gap}
 % •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
     The \textit{Efficiency Gap} is calculated as defined in \citet{Stephanopoulos2014_UofChicagoLaw}, where all the party’s votes are wasted if they lose the district, and all the winner’s votes over 50\% are wasted. The difference between each party’s wasted votes is then divided by the total votes cast to produce the \textit{Efficiency Gap}, with a value of zero denoting what is regarded as ideal. As noted in \citet[][p. 13]{Best2018}, this is equivalent to taking an aggregate responsiveness (swing ratio) of two as ideal. 
 \par
-% •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
-        \subsubsection*{Declination}
+% ↤↤↤↤↤ -------------- S̟U̟B̟-S̟U̟B̟S̟E̟C̟T̟I̟O̟N̟ -------------- ↦↦↦↦↦
+            \subsubsection*{Declination}
 % •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
     Among the more recent measures of gerrymandering is the declination. Declination is an astronomical term referring to the angle on a compass, with a Latin root meaning ``a bending away". For gerrymandering, it uses the angles created from ordering all of the districts by vote share, computing the mean vote-share for each party separately for the seats they won, and then comparing the differences in their distribution. To compare, a line is draw from the mean vote-share to the 0.5 line separately for each party. The angle formed from the different slopes of the line is called the declination. An angle indicates whether a plan is a gerrymandering, under the logic that vote-shares should be distributed in some uniform manner across districts. If partisan are \textit{packed}, the angle will be greater. All values range between -1 and 1. Though we have defined the vote-share in terms of Republican outcomes, we adjusted the values such that \underline{negative} values are favorable to the Democrats. Further information can be found in \citet{Warrington2018}.  
 \par
-% •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
-        \subsubsection*{Measuring Gerrymandering}
+% ↤↤↤↤↤ -------------- S̟U̟B̟-S̟U̟B̟S̟E̟C̟T̟I̟O̟N̟ -------------- ↦↦↦↦↦
+            \subsubsection*{Measuring Gerrymandering}
 % •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
     We emphasize that a partisan gerrymandering claim based on political consequences should also provide evidence that the (a) gerrymandering indicators that are found cannot be explained simply by the geographic distribution of each party’s electoral support (e.g., differential concentration of electoral support can lead to what has been called a ``natural gerrymander"), and (b) that the partisan asymmetry in translating votes into seats is not due to chance alone (e.g., many highly competitive seats won by very narrow margins) but can be expected to be durable. With only 18 districts, sensitivity to chance effects is particularly important. 
 \par
@@ -307,8 +308,10 @@
 \par
     In our view, none of these four measures standing alone can be taken to be proof of gerrymandering. Rather we see them as potentially reinforcing indicators. Our own analyses have found hypotheticals where these measures can generate either a false positive or a false negative, but we have also found that consistent bias in the same direction is unlikely when we use multiple indicators (data omitted for space reasons). Here, however, all four indicators, like the actual election results, point clearly and overwhelmingly in the same direction vis-à-vis the 2011 Enacted plan -- namely that it is a blatant pro-Republican partisan gerrymander.
 %
-% =================================================================
-\subsection*{Evaluating Partisan Gerrymandering using Statewide elections to provide a normal vote baseline}
+% •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
+% ▀▄▀▄▀▄ 𝚂𝚄𝙱𝚂𝙴𝙲𝚃𝙸𝙾𝙽 ▄▀▄▀▄▀▀▄▀▄▀▄ 𝚂𝚄𝙱𝚂𝙴𝙲𝚃𝙸𝙾𝙽 ▄▀▄▀▄▀▀▄▀▄▀▄ 𝚂𝚄𝙱𝚂𝙴𝙲𝚃𝙸𝙾𝙽 ▄▀▄▀▄▀
+% •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
+        \subsection*{Evaluating Partisan Gerrymandering using Statewide elections to provide a normal vote baseline}
 % =================================================================
 %
     In order to assess expected partisan consequences for plans that have not yet been implemented we need to develop a predictive equation, and that is most readily done with data on partisan outcomes for state-wide elections projected into the new districts. For example, Professor Jowei Chen in his testimony in the Pennsylvania case used a composite of the six state-wide elections between 2008 and 2010 to estimate the political consequences of alternative maps. After extensive investigation of alternative prediction models and their accuracy in reproducing the partisan outcomes of the 2012, 2014, and 2016 congressional elections at the district level (data omitted for space reasons), we have opted for a model that takes the average of five state-wide 2016 elections that reflect a balance of Republican and Democratic success: President, U.S. Senate, PA Attorney General, PA Treasurer, and PA Auditor. Republicans won the statewide vote in two of them (President, U.S. Senate), while the Democrats won the statewide vote in three of them (Auditor, Treasurer, and Attorney General). The average vote for the Republicans across these five elections was 49.1\%.
@@ -324,7 +327,7 @@
 %        ================================================================= 
 %        -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE --  %
 % ------------------------------------------------------------------------
-        \footnote{We report the Republican share of the two-party vote ($\delta_{i}$). Districting plans are represented by $\mathcal D $, (e.g., $\mathcal D_{enacted}$, $\mathcal D_{remedial}$, \dots, $\mathcal D_{j}$), and each election in year $ y $ has a district vote distribution $ \Delta_{y} = [\delta_{y1}, \delta_{y2}, \dots, \delta_{yi}] $. To find the overall state-wide vote, we calculate the average district vote share, $ \bar{\Delta}_{\mathcal D y} = \frac{1}{n}\sum\limits_{i=1}^{n} \delta_{yi} $. By averaging, we reduce the influence of turnout variation among districts. This district-specific average is a useful state-wide estimate of voter sentiment though it is in part effected by the particular configuration of districts being examined \citep[see e.g.][cf. \cite{Grofman_et_al_1997__IntedgratedPerspective_ES}]{Kastellec_et_al_2008_PS}. In particular, incumbency advantage effects affect our ability to accurately predict vote outcomes. In ancillary work not reported here, we have looked at changes in congressional incumbency advantage in Pennsylvania over multiple decades.}
+    \footnote{We report the Republican share of the two-party vote ($\delta_{i}$). Districting plans are represented by $\mathcal D $, (e.g., $\mathcal D_{enacted}$, $\mathcal D_{remedial}$, \dots, $\mathcal D_{j}$), and each election in year $ y $ has a district vote distribution $ \Delta_{y} = [\delta_{y1}, \delta_{y2}, \dots, \delta_{yi}] $. To find the overall state-wide vote, we calculate the average district vote share, $ \bar{\Delta}_{\mathcal D y} = \frac{1}{n}\sum\limits_{i=1}^{n} \delta_{yi} $. By averaging, we reduce the influence of turnout variation among districts. This district-specific average is a useful state-wide estimate of voter sentiment though it is in part effected by the particular configuration of districts being examined \citep[see e.g.][cf. \cite{Grofman_et_al_1997__IntedgratedPerspective_ES}]{Kastellec_et_al_2008_PS}. In particular, incumbency advantage effects affect our ability to accurately predict vote outcomes. In ancillary work not reported here, we have looked at changes in congressional incumbency advantage in Pennsylvania over multiple decades.}
 % ----------------------------------------------------------------- 
 % -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE %
 % =================================================================
@@ -332,7 +335,7 @@
 %        ================================================================= 
 %        -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE -- FOOTNOTE --  %
 % ------------------------------------------------------------------------
-		\footnote{We wrote a function in \texttt{R} to assign all VTDs to a district based on the centroid of the VTD. This method creates a slight difference between it and the actual vote, but averages just -0.06\% per district. Most of the mis-allocation is between two adjacent districts, District 1 and District 13, both overwhelmingly Democratic districts.}
+	\footnote{We wrote a function in \texttt{R} to assign all VTDs to a district based on the centroid of the VTD. This method creates a slight difference between it and the actual vote, but averages just -0.06\% per district. Most of the mis-allocation is between two adjacent districts, District 1 and District 13, both overwhelmingly Democratic districts.}
 % ------------------------------------------------------------------------ 
 %        -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE -- END FOOTNOTE %
 %        =================================================================
@@ -401,9 +404,10 @@
 \par
     In sum, looking at the evidence above, we see exactly the same ordering of plans according to their characterizability as a partisan gerrymander as we saw when we ordered plans according to the degree to which they satisfied good government criteria (see Table \ref{tab:summaries}), with the 2011 map the worst and the 2018 court-ordered map far and away the best. This conclusion is further buttressed by the data we present in Table \ref{tab:prob}. Here we create a probabilistic simulation using statewide five-election composite (set to a 50-50 vote share) to estimate the likelihood that random shocks (based on past state inter-election shift data) would change party control of the congressional delegation. 
 \par
-% •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
-% •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
-    \subsection*{Natural Gerrymanders}
+% •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
+% ▀▄▀▄▀▄ 𝚂𝚄𝙱𝚂𝙴𝙲𝚃𝙸𝙾𝙽 ▄▀▄▀▄▀▀▄▀▄▀▄ 𝚂𝚄𝙱𝚂𝙴𝙲𝚃𝙸𝙾𝙽 ▄▀▄▀▄▀▀▄▀▄▀▄ 𝚂𝚄𝙱𝚂𝙴𝙲𝚃𝙸𝙾𝙽 ▄▀▄▀▄▀
+% •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
+        \subsection*{Natural Gerrymanders}
 % •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
     In 2018, even under a court-drawn plan, in a year when Democrats had won a clear majority of the aggregate two-party congressional vote, Democrats only succeeded in winning exactly 50\% of the seats. Trying to understand why all four of the plans we considered had some level of pro-Republican bias requires us to look in more detail at the partisan electoral geography of Pennsylvania. In Pennsylvania, Philadelphia is overwhelmingly Democratic in voting. In particular, if you draw two congressional districts entirely within Philadelphia County, one of them is very likely to give Democratic candidates around 90\% of the vote, and for sure, as long as both are wholly within the County, the average vote in the two will be around 80\% Democratic no matter how you draw the two districts. There are no other large, concentrated pockets of equivalently overwhelmingly Republican voting strength. Thus, more Democratic votes will \textit{naturally} be ``wasted" in Philadelphia than Republican votes will be ``wasted" elsewhere in the state. Additionally, the city of Philadelphia is landlocked, and its position on the state's border reduces the ability of line drawers who favor Democrats to distribute these voters into multiple districts so as to minimize the extent to which Democratic votes in the county are wasted. Additional Democratic wasted votes come in heavily Democratic Allegheny County, the county in which the city of Pittsburgh is located. However, saying that urban concentration of Democrats means that it is harder for Democrats to turn their votes into seats than is the case for Republicans does not mean that we cannot distinguish the effects of such \textit{natural} gerrymanders from \textit{intentional} political gerrymandering, since the latter generates perverse consequences for Democratic voters to a far greater extent than the likely one district or so penalty created by the nature of Pennsylvania’s present electoral geography. 
 %        ================================================================= 
@@ -450,7 +454,7 @@
 % ▀▀█ █▀▀ █░░ ░░█░░ ▀█▀ █░░█ █░░█
 % ▀▀▀ ▀▀▀ ▀▀▀ ░░▀░░ ▀▀▀ ▀▀▀▀ ▀░░▀
 % •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
-\section{Conclusions and Lessons for the future; The Potential Impact of LWV}
+    \section{Conclusions and Lessons for the future; The Potential Impact of LWV}
 % •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
     While the Pennsylvania court opinion is limited to Pennsylvania, and thus it might have seemed of importance only in Pennsylvania, in footnote 71 of the Opinion (slip op. pp.116-117), the court took what we regard as a rather unusual step. It issued what can only be called an invitation to other state courts to use the same logic it used to invalidate partisan gerrymanders in their own state. As we noted earlier, the Court pointed out that there are twelve additional states whose constitutions contain election clauses identical to the Pennsylvania charter, requiring elections to be ``free and equal”: Arizona, Arkansas, Delaware, Illinois, Indiana, Kentucky, Oklahoma, South Dakota, Oregon, Tennessee, Washington, and Wyoming.
 % ================================================================= 
